log
Thu 28 Mar 2024 06:49:27 PM UTC: 
 list.c | 48 ++++++++++++++++++++----------------------------
 1 file changed, 20 insertions(+), 28 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘ista’?
   33 |   lista->head = NULL;
      |   ^~~~~
      |   ista
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘ista’ [-Werror=unused-variable]
   32 |   List *ista = (List *)malloc(sizeof(List));
      |         ^~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5b4d98f
Thu 28 Mar 2024 06:49:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0e9e8b4
Thu 28 Mar 2024 06:51:17 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:40:1: error: expected identifier or ‘(’ before ‘{’ token
   40 | {
      | ^
Compilation failed
e3a63bd
Thu 28 Mar 2024 06:51:37 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
cbd7971
Thu 28 Mar 2024 06:55:35 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:9: error: unused variable ‘first’ [-Werror=unused-variable]
   40 |   void *first = list->head->data;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
872e308
Thu 28 Mar 2024 06:55:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51f8cb9
Thu 28 Mar 2024 06:56:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:27: error: array subscript is not an integer
   40 |   void *first = list->head[list->current];
      |                           ^
Compilation failed
2f87088
Thu 28 Mar 2024 06:59:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:17: error: ‘L’ undeclared (first use in this function)
   42 |   void *first = L->head->data;
      |                 ^
list.c:42:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f972062
Thu 28 Mar 2024 06:59:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b48376
Thu 28 Mar 2024 07:00:58 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
e3ee796
Thu 28 Mar 2024 07:01:27 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
a5c2e8f
Thu 28 Mar 2024 07:01:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f9ccaef
Thu 28 Mar 2024 07:06:45 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7c56fa4
Thu 28 Mar 2024 07:07:38 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
efed49b
Thu 28 Mar 2024 07:08:26 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
84148c8
Thu 28 Mar 2024 07:08:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eff7c2c
Thu 28 Mar 2024 07:09:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
31fae82
Thu 28 Mar 2024 07:10:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5a457e4
Thu 28 Mar 2024 07:10:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d796444
Thu 28 Mar 2024 07:11:36 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:18: error: ‘List’ {aka ‘struct List’} has no member named ‘currente’; did you mean ‘current’?
   42 |     return list->currente->data;
      |                  ^~~~~~~~
      |                  current
Compilation failed
c1c4a09
Thu 28 Mar 2024 07:11:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f59c915
Thu 28 Mar 2024 07:12:24 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘firstList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:79:8: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   79 |   void cleanList(List * list) {
      |        ^~~~~~~~~
list.c:72:9: error: ‘popBack’ defined but not used [-Werror=unused-function]
   72 |   void *popBack(List * list) {
      |         ^~~~~~~
list.c:60:8: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   60 |   void pushBack(List * list, void *data) {
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bf4b5d9
Thu 28 Mar 2024 07:12:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f969876
Thu 28 Mar 2024 07:13:59 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
e4d40fc
Thu 28 Mar 2024 07:15:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8465a71
